--- a/src/components/Row/styles.css
+++ b/src/components/Row/styles.css
@@ -43,6 +43,9 @@
 }
 
 .row__middle-first-right {
+  display: flex;
+  justify-content: flex-start;
+  width: 260px;
   font-size: 24px;
   color: #333333;
 }
